--- a/video-processing-service/src/tsconfig.json
+++ b/video-processing-service/src/tsconfig.json
@@ -9,7 +9,7 @@
       "strict": true,
       "skipLibCheck": true,
       "noImplicitAny": true,
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/index.ts"],
     "exclude": ["node_modules"],
     "typeRoots": ["./node_modules/@types", "./src/types"]
   }
