--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -4,7 +4,6 @@
   "description": "a skeleton clone of how youtube works on backend with video processing and loadout handling",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "start": " ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
@@ -17,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1",
+    "@google-cloud/storage": "^7.15.0",
+    "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
