--- a/yt-api-service/package.json
+++ b/yt-api-service/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.2"
   }
 }
