--- a/yt-api-service/functions/package.json
+++ b/yt-api-service/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "firebase-admin": "^13.2.0",
     "firebase-functions": "^6.3.2"
   },
