--- a/yt-api-service/package.json
+++ b/yt-api-service/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "firebase-admin": "^13.2.0",
+    "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "typescript": "^5.8.2"
   }
 }
