--- a/yt-api-service/package.json
+++ b/yt-api-service/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2"
   },
